# aura-mcdm-app

./: .gitignore  AURA_MonteCarlo_Results.xlsx  AURA_MonteCarlo_Results_Detailed.xlsx  Full result AURA_new_weights.csv  LICENSE  README.md  Summary_Statistics.xlsx  aras_calculator.py  arie_calculator.py  aura_app.py  aura_calculator.py  entropy_calculator.py  fuzzy_aras_calculator.py  fuzzy_parser.py  generate_export.py  generate_paper_figures.py  generate_report.py  mc_results.txt  merec_calculator.py  monte_carlo_aura.py  monte_carlo_scenarios.py  moora_calculator.py  new_baseline.py  out.txt  out2.txt  pyproject.toml  read_excel.py  report.json  requirements.txt  res.json  sample_aura_data.csv  saw_calculator.py  syai_calculator.py  test_trfn.py  topsis_calculator.py  vikor_calculator.py
.github/workflows/: ci.yml
mcdm/: __init__.py  analysis.py  criteria.py  presentation.py  ranking.py  research.py  state.py  uploads.py  validation.py
tests/: test_alias_target_weights.py  test_app_hardening.py  test_app_smoke.py  test_fuzzy.py  test_fuzzy_weight_validation.py  test_methods.py  test_monte_carlo_hardening.py  test_monte_carlo_methods.py  test_ratio_domains.py  test_state_research.py  test_syai_methodology.py  test_uploads.py  test_validation.py
